<resources>
    <string name="app_name">Leprechaun</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmarks</string>
    <string name="title_rss">Recents</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint_first_city">1. city</string>
    <string name="search_compare_with">Compare with</string>
    <string name="search_second_city">2. city</string>
    <string name="search_action_compare">Compare</string>
    <string name="rss_recent_changes">Recent changes</string>
    <string name="bookmark_bookmarks_title">Bookmarks</string>
    <string name="search_desc_app_logo">app logo</string>
    <string name="comparison_toggle_info">Toggle info</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_leprechaun_bookmarks">Leprechaun Bookmarks</string>

    <string name="city_name_required">You must enter a city name</string>
    <string name="cd_bookmark_remove">remove bookmark</string>
    <string name="cd_bookmark">bookmark</string>

    <string name="city_vs">%1$s vs %2$s</string>
</resources>
