<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".features.search.SearchFragment">

        <ImageView
            android:id="@+id/iv_search_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/search_desc_app_logo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/saint_patrick" />

        <TextView
            android:id="@+id/tv_search_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="@+id/iv_search_logo"
            app:layout_constraintStart_toStartOf="@+id/iv_search_logo"
            app:layout_constraintTop_toBottomOf="@+id/iv_search_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_search_first_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_app_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_search_first_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint_first_city"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_search_compare_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/search_compare_with"
            app:layout_constraintEnd_toEndOf="@+id/til_search_first_city"
            app:layout_constraintStart_toStartOf="@+id/til_search_first_city"
            app:layout_constraintTop_toBottomOf="@+id/til_search_first_city" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_search_second_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_search_first_city"
            app:layout_constraintStart_toStartOf="@+id/til_search_first_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_compare_with">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_search_second_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_second_city"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_search_compare"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_action_compare"
            app:layout_constraintEnd_toEndOf="@+id/til_search_second_city"
            app:layout_constraintStart_toStartOf="@+id/til_search_second_city"
            app:layout_constraintTop_toBottomOf="@+id/til_search_second_city" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>